# xxyy-ask

./: .dockerignore  .env.example  .gitignore  .gitmessage  .prettierignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  tsconfig.json
.codex/: config.toml
.githooks/: commit-msg  pre-commit  pre-push
docs/: README.md  agent-system-design.md  architecture.md  capability-plane.md  chain-control-provisioning-operations.md  chain-data-plane-operations.md  development-workflow.md  evm-chain-analysis-control-store.md  evm-chain-analysis-harness.md  evm-chain-analysis-production-decision-gate.md  evm-chain-analysis-production-provisioning.md  evm-chain-analysis-readiness-evidence-ledger.md  evm-chain-analysis-readiness.md  evm-chain-analysis-review-work-queue.md  evm-chain-analysis-sampling-handoff.md  evm-chain-analysis-sampling.md  evm-data-adapter.md  evm-execution-data-adapter.md  evm-execution-enrichment.md  evm-mev-observation-data-adapter.md  evm-price-impact-sandwich.md  feature-status.md  knowledge-evolution.md  knowledge-refresh-operations.md  knowledge-sources.md  production-readiness.md  roadmap.md  target-product-design.md  transaction-analysis-core.md  tx-analysis-mcp-smoke-samples.mock.json  tx-analysis-smoke-samples.example.json  tx-hash-sandwich-detection-design.md
scripts/: agent-smoke.mjs  agent-smoke.test.mjs  api-smoke.mjs  api-smoke.test.mjs  audit-xxyy-docs.mjs  audit-xxyy-docs.test.mjs  ci-workflow.test.mjs  (+31 more)
(+322 files in other folders)
